# deferred-correction

./: LICENSE  README.md  pyproject.toml
deferred_correction/: DeC.py  __init__.py
tests/: test_quadrature.py
